# vst3mcpwrapper

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md
cmake/: patch_mcp_server.cmake  patch_mcp_version.cmake  validate_bundle_linux.cmake
resource/: Info.plist.in
scripts/ralph-workspace/: .last-branch  CLAUDE.md  prd.json  progress.txt  ralph.sh
scripts/ralph-workspace/archive/2026-02-22-hardening/: prd.json  progress.txt
scripts/ralph-workspace/archive/2026-02-22-quality-review/: prd.json  progress.txt
source/: controller.cpp  controller.h  dispatcher.h  dispatcher_linux.cpp  dispatcher_mac.mm  factory.cpp  hostedplugin.cpp  hostedplugin.h  logging.h  mcp_param_handlers.h  mcp_plugin_handlers.h  messageids.h  pluginids.h  processor.cpp  processor.h  stateformat.h  version.h  wrapperview.h  wrapperview.mm  wrapperview_linux.cpp
tasks/: prd-testing-and-multi-instance.md
tests/: CMakeLists.txt  test_controller_componenthandler.cpp  test_controller_state.cpp  test_controller_view.cpp  test_dispatcher_linux.cpp  test_hostedplugin.cpp  test_mcp_param_tools.cpp  test_mcp_plugin_tools.cpp  test_mcp_server_integration.cpp  test_message_routing.cpp  test_mock_vst3.cpp  test_param_queue.cpp  test_passthrough_aliasing.cpp  test_placeholder.cpp  test_plugin_scanning.cpp  test_processor_lifecycle.cpp  test_processor_process.cpp  test_processor_state.cpp  test_queue_overflow.cpp  test_shutdown.cpp  test_state_roundtrip.cpp  test_stateformat.cpp  test_unload_cleanup.cpp  test_utf16_conversion.cpp  test_wrapperview_linux.cpp
tests/helpers/: controller_test_access.h  processor_test_access.h  test_helpers.h
tests/mocks/: mock_vst3.h
